# myTev

./: .gitignore  CMakeLists.txt  hints.txt
clip/: CMakeLists.txt  clip.cpp  clip.h  clip_common.h  clip_none.cpp  clip_win_wic.h  image.cpp
dependencies/: CMakeLists.txt
dependencies/nanogui/: .gitignore  .gitmodules  CMakeLists.txt
dependencies/nanogui/ext/glfw/: .gitignore
dependencies/nanogui/include/nanogui/: imageview.h  screen.h  vector.h  widget.h
dependencies/nanogui/src/: canvas.cpp  common.cpp  label.cpp  layout.cpp  opengl_check.h  popupbutton.cpp  screen.cpp  shader_gl.cpp  slider.cpp  texture.cpp  texture_gl.cpp  theme.cpp  widget.cpp  window.cpp
include/: HelpWindow.h  Image.h  ImageButton.h  ImageCanvas.h  ImageViewer.h  Ipc.h  MultiGraph.h  SharedQueue.h  Task.h  ThreadPool.h
include/imageio/: ClipboardImageLoader.h  DdsImageLoader.h  EmptyImageLoader.h  ExrImageLoader.h  ExrImageSaver.h  ImageLoader.h  ImageSaver.h  PfmImageLoader.h  QoiImageLoader.h  QoiImageSaver.h  StbiHdrImageSaver.h  StbiImageLoader.h  StbiLdrImageSaver.h
nanogui/: CMakeLists.txt
nanogui/include/nanogui/: canvas.h  common.h  popupbutton.h  renderpass.h  screen.h  shader.h  vector.h  widget.h  window.h
nanogui/nanovg/: nanovg.c
nanogui/resources/: bin2c.cmake
nanogui/src/: button.cpp  graph.cpp  imagepanel.cpp  imageview.cpp  opengl.cpp  renderpass_gl.cpp  screen.cpp  shader.cpp  textarea.cpp  theme.cpp  window.cpp
src/: Box.cpp  Box.h  Channel.cpp  Channel.h  Common.cpp  Common.h  FalseColor.cpp  FalseColor.h  HelpWindow.cpp  Image.cpp  Image.h  ImageButton.cpp  ImageButton.h  ImageCanvas.cpp  ImageCanvas.h  ImageViewer.cpp  ImageViewer.h  Ipc.cpp  Lazy.cpp  Lazy.h  MultiGraph.cpp  MultiGraph.h  SharedQueue.cpp  SharedQueue.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  UberShader.cpp  UberShader.h  args.h  clientDemo.cpp  main.cpp  tinyformat.h
src/imageio/: ClipboardImageLoader.cpp  ClipboardImageLoader.h  DdsImageLoader.cpp  DdsImageLoader.h  EmptyImageLoader.cpp  EmptyImageLoader.h  ExrImageLoader.cpp  ExrImageLoader.h  ExrImageSaver.cpp  ExrImageSaver.h  ImageLoader.cpp  ImageLoader.h  ImageSaver.cpp  ImageSaver.h  PfmImageLoader.cpp  PfmImageLoader.h  QoiImageLoader.cpp  QoiImageLoader.h  QoiImageSaver.cpp  QoiImageSaver.h  StbiHdrImageSaver.cpp  StbiHdrImageSaver.h  StbiImageLoader.cpp  StbiImageLoader.h  StbiLdrImageSaver.cpp  StbiLdrImageSaver.h
src/include/: Box.h  FalseColor.h  HelpWindow.h  Image.h  ImageViewer.h  Ipc.h  Lazy.h  MultiGraph.h  UberShader.h
utils/: tinylogger.h
